vchain-campaign-deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign-deploy
  labels:
    app: campaign-service
  annotations:
spec:
  selector:
    matchLabels:
      app: campaign-service
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: campaign-service
    spec:
      containers:
      - name: campaign-service
        image: vking34/vchain-campaign-service:v1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
        resources:
          requests:
            memory: "256Mi"
            cpu: "80m"
          limits:
            memory: "512Mi"
            cpu: "300m"
