vchain-campaign-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campaign-service
spec:
    type: NodePort
    selector:
        app: campaign-service
    ports:
        - port: 8088
          targetPort: 8088
          protocol: TCP
